# gleanr

./: CHANGELOG.md  pyproject.toml
examples/evaluation/: run.py
gleanr/: __init__.py
gleanr/core/: config.py  session.py
gleanr/memory/: coverage.py  recall.py  reflection.py
gleanr/providers/: anthropic.py  openai.py  parsing.py
tests/integration/: test_consolidation.py
