[build-system]
requires = ["hatchling<1.22"]
build-backend = "hatchling.build"

[project]
name = "gleanr"
version = "0.1.0"
description = "Gleanr - Session-scoped memory layer for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Saket Kumar" }
]
keywords = ["ai", "agents", "memory", "context", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19.0"]
chroma = ["chromadb>=0.4.0"]
postgres = ["asyncpg>=0.29.0", "pgvector>=0.2.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
tiktoken = ["tiktoken>=0.5.0"]
http = ["httpx>=0.25.0"]
examples = [
    "httpx>=0.25.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "aiosqlite>=0.19.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "httpx>=0.25.0",
]
all = [
    "gleanr[sqlite,chroma,postgres,openai,anthropic,tiktoken,http]",
]

[project.urls]
Homepage = "https://github.com/Saket-Kr/gleanr"
Documentation = "https://github.com/Saket-Kr/gleanr#readme"
Repository = "https://github.com/Saket-Kr/gleanr"

[tool.hatch.build.targets.wheel]
packages = ["gleanr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["gleanr"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "pgvector.*",
    "sqlite_vec.*",
]
ignore_missing_imports = true
